[gd_scene load_steps=9 format=3 uid="uid://b0c0hsx3fyk3j"]

[ext_resource type="Script" uid="uid://crgthj8go4bpn" path="res://Dialogue system/dialogue.gd" id="1_kp46k"]
[ext_resource type="FontFile" uid="uid://bj4jlii35olyc" path="res://Roboto-Regular.ttf" id="2_hoxo3"]
[ext_resource type="Script" uid="uid://dgasyuqsa6tbx" path="res://Dialogue system/dialogue_player.gd" id="2_oi3j2"]
[ext_resource type="PackedScene" uid="uid://dvvpy51xk4086" path="res://Dialogue system/pause_calculator.tscn" id="3_758ep"]

[sub_resource type="Curve" id="Curve_kp46k"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_oi3j2"]
_data = [Vector2(0, 0.882168), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_758ep"]
_data = [Vector2(1, 0.682761), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_hoxo3"]
curve_x = SubResource("Curve_kp46k")
curve_y = SubResource("Curve_oi3j2")
curve_z = SubResource("Curve_758ep")

[node name="Dialogue" type="Control"]
custom_minimum_size = Vector2(798, 149)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -399.0
offset_top = -149.0
offset_right = 399.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
script = ExtResource("1_kp46k")

[node name="background" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(798, 149)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -399.0
offset_top = -74.5
offset_right = 399.0
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CurveXYZTexture_hoxo3")
region_rect = Rect2(0, -3.2521, 246.76, 83.2521)

[node name="content" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(773, 128)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -386.5
offset_top = -64.0
offset_right = 386.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_hoxo3")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
fit_content = true

[node name="typetimer" type="Timer" parent="."]
wait_time = 0.04

[node name="pausetimer" type="Timer" parent="."]

[node name="DialoguePlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("2_oi3j2")

[node name="PauseCalculator" parent="." instance=ExtResource("3_758ep")]

[node name="Donetimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="typetimer" to="." method="_on_typetimer_timeout"]
[connection signal="timeout" from="pausetimer" to="." method="_on_pausetimer_timeout"]
[connection signal="pause_requested" from="PauseCalculator" to="." method="on_PauseCalculator_pause_requested"]
[connection signal="timeout" from="Donetimer" to="." method="_on_donetimer_timeout"]
